added more styling to article 02 body text

--- a/Pages/article-2.html
+++ b/Pages/article-2.html
@@ -27,7 +27,7 @@
 
 			<div id="intro">
 				<h5>
-					Welcome to Noticed, The Goods’ design trend column. You know that thing you’ve been seeing all over the place? Allow us to explain it.</h5>
+					Welcome to Noticed, The Goods’ design trend column. You know <span class="s-highlighted-text">that thing you’ve been seeing all over the place?</span> Allow us to explain it.</h5>
 			</div>
 	
 			<nav class="nav-container">
@@ -181,14 +181,41 @@
 					<span class="bold-text">Bisexual lighting shows up in the futuristic genre cyberpunk, which imagines an era in which high technology and low technology combine and cities are neon-bathed, landmarkless Gothams. </span>(Overlapping with vaporwave.) Mainstream examples of cyberpunk include Blade Runner, Ghost in the Shell, and Black Mirror (specifically the “San Junipero” episode). Hotline Bling makes the list of examples for bisexual lighting; the gradients come full circle.
 				</p>
 
-				<p>Tati Pastukhova, co-founder of interactive art space ARTECHOUSE, says <span class="emphasis-word">gradients</span> have become more popular as computer display quality increases. She says the appeal of <span class="emphasis-word">gradients</span> is “the illusion of dimension, and giving 2-D designs 3-D appeal.” ARTECHOUSE is full of light-based digital installations, but visitors naturally gravitate toward what is most photogenic — including, unexpectedly, the soft lighting the space installed along their staircase for safety reasons.</p>
+				<p>
+					Gradients have become more popular as computer display quality increases. Tati says the appeal of is ...
+				</p>
+
+				<div class="quoting">
+					<div class="left-column">
+						<h3 class="author">Tati Pastukhova </h3>
+						<h3 class="occupation">co-founder of interactive art space ARTECHOUSE
+						</h3>
+					</div>	
+
+					<div class="right-column">
+						<h3 class="text">“the illusion of dimension, and giving 2-D designs 3-D appeal.” ARTECHOUSE is full of light-based digital installations, but visitors naturally gravitate toward what is most photogenic — including, unexpectedly, the soft lighting the space installed along their staircase for safety reasons.</h3>
+					</div>
+				</div>
 
 				<p>Before gradients, neon lettering was the Instagram lighting aesthetic du jour. <span class="emphasis-word">Gradients</span> are wordless — like saying Live Laugh Love with just colors. “There’s an inherent progression in <span class="emphasis-word">gradients</span>gradients, you are being taken through something. Like that progression of Live Laugh Love. Of starting at one point and ending at another point. Evoking that visually is something people are very drawn to,” says Taylor Lorenz, a staff writer at the Atlantic who covers internet culture.</p>
 
 				<p>Gradients are also boundaryless. In 2016, artist Wolfgang Tillmans used gradients in his anti-Brexit poster campaign. Through gradients, designers have found the perfect metaphor for subjectivity in an era when even the word “fact” is up for debate. “Gradients are a visual manifestation of all of these different spectrums that we live on,” including those of politics, gender, and sexuality, says Lorenz. “Before, I think we lived in a binary world. [Gradients are] a very modern representation of the world.”At the very least, gradients offer an opportunity to self-soothe.</p>
 
-				<p>Calico co-founder Nick Cope says the Aurora collection is often used in meditation rooms. He and his wife have installed it across from their bed at home. “The design was created to immerse viewers in waves and washes of tranquil atmospheric color,” Cope says, adding, “Regardless of the weather, we wake up to a sunrise every morning.”</p>
+				<div class="quoting">
+					<div class="left-column">
+						<h3 class="author">Nick Cope  </h3>
+						<h3 class="occupation">co-founder of Calico
+						</h3>
+					</div>	
 
+					<div class="right-column">
+						<h3 class="text">“The design was created to immerse viewers in waves and washes of tranquil atmospheric color,” Cope says, adding, “Regardless of the weather, we wake up to a sunrise every morning.”</h3>
+					</div>
+				</div>
+
+				<p>
+					He says that the Aurora collection is often used in meditation rooms. He and his wife have installed it across from their bed at home. 
+				</p>
 				</section>
 			</article>
 		</div>
