--- a/index.html
+++ b/index.html
@@ -92,13 +92,13 @@
 
 			</p>
 			<p>
-				From *Hooked on a Feeling*, I’ve taken the idea that design isn’t just about function—it’s about intention. It’s about evoking emotions and crafting meaningful experiences, even in an age dominated by data. This article also emphasizes the importance of tools like mood boards, which can spark inspiration and help refine ideas during the creative process.  
+				From <span id="article-01"> "Hooked on a Feeling"</span>, I’ve taken the idea that design isn’t just about function—it’s about intention. It’s about evoking emotions and crafting meaningful experiences, even in an age dominated by data. This article also emphasizes the importance of tools like mood boards, which can spark inspiration and help refine ideas during the creative process.  
 			</p>
 			<p>
-				The second chapter focuses on *Gradients* by Daisy Alioto. This article dives into why gradients have become so popular, explaining how certain aesthetics can offer psychological comfort. It’s a reminder that design often mirrors the emotions of the times. Moving forward, I’d like to experiment with soft gradients, using them thoughtfully to create designs that feel calm, soothing, and intentional.  
+				The second chapter focuses on <span id="article-02">Gradients</span>by Daisy Alioto. This article dives into why gradients have become so popular, explaining how certain aesthetics can offer psychological comfort. It’s a reminder that design often mirrors the emotions of the times. Moving forward, I’d like to experiment with soft gradients, using them thoughtfully to create designs that feel calm, soothing, and intentional.  
 			</p>
 			<p>
-				Finally, *Words as Materials* by Nicole Fenton rounds out the collection. With the visuals in place—the vibes, the colors—words come in to complete the story. Fenton treats words as tangible materials, breaking down how writing can be a design tool in its own right. She shows how thoughtful communication can elevate the design process, turning writing into a way to connect ideas and reach others.  
+				Finally,<span id="article-01"> Words as Materials </span> by Nicole Fenton rounds out the collection. With the visuals in place—the vibes, the colors—words come in to complete the story. Fenton treats words as tangible materials, breaking down how writing can be a design tool in its own right. She shows how thoughtful communication can elevate the design process, turning writing into a way to connect ideas and reach others.  
 			</p>
 
 			<p>
