adding shapes to homepage

--- a/index.html
+++ b/index.html
@@ -2,7 +2,9 @@
 <html>
 	<head>
 		<title>Project 3-Binding</title>
+		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
+		
 	<!-- stylesheets -->
 	<link href="../Stylesheets/reset.css" rel="stylesheet">
 	<link rel="stylesheet" href="../Stylesheets/homepage.css">
@@ -10,16 +12,22 @@
 
 	<body>
 		<header>
-			<div class="header"></div>
+			<div class="header">
 				<span class="short-text">T&I</span>
 				<span class="full-text">Typography & Interaction</span>
 				<span class="short-text">03</span>
-				<span class="full-text" id="strike">Project 03</span>
+				<span class="full-text">Project 03</span>
 				<span class="short-text">VM</span>
 				<span class="full-text">Vee Mai</span>
 			</div>
 	
 			<h1>Binding</h1>
+
+			<div class="decorative-01"></div>
+
+			<div class="decorative-02"></div>
+
+			<div class="decorative-03"></div>
 
 			<div id="intro">
 				<h3>
@@ -33,7 +41,6 @@
 			<div id="sub-title">Explore all chapters below!</div>
 
 			<ol class="cardlink-container">
-	
 				<a href="Pages/article-1.html">
 					<li class="cardlink" id="card1">
 						<div class="cardlink-item1">
@@ -85,6 +92,9 @@
 		</div>
 
 		<section id="colophon">
+			<div class="decorative-04"></div>
+			<div class="decorative-05"></div>
+			<div class="decorative-06"></div>
 			<p>
 				This “binding” book brings together three articles that explore the intersection of design, emotion, and communication:  
 			</p>
@@ -99,9 +109,9 @@
 				The second chapter focuses on <span id="article-02">Gradients</span> by Daisy Alioto. This article dives into why gradients have become so popular, explaining how certain aesthetics can offer psychological comfort. It’s a reminder that design often mirrors the emotions of the times. Moving forward, I’d like to experiment with soft gradients, using them thoughtfully to create designs that feel calm, soothing, and intentional.  
 			</p>
 			<p>
-				Finally,<span id="article-01"> Words as Materials </span> by Nicole Fenton rounds out the collection. With the visuals in place—the vibes, the colors—words come in to complete the story. Fenton treats words as tangible materials, breaking down how writing can be a design tool in its own right. She shows how thoughtful communication can elevate the design process, turning writing into a way to connect ideas and reach others.  
+				Finally, <span id="article-03">Words as Materials</span> by Nicole Fenton rounds out the collection. With the visuals in place—the vibes, the colors—words come in to complete the story. Fenton treats words as tangible materials, breaking down how writing can be a design tool in its own right. She shows how thoughtful communication can elevate the design process, turning writing into a way to connect ideas and reach others.  
 			</p>
-
+			
 			<p>
 			Together, these articles highlight a recurring theme: intention. Whether through visuals, colors, or words, great design starts with purpose. By embracing this, designers can create more meaningful work that not only communicates but also resonates.  
 			</p>
