attempting to add scroll arrow

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 		<title>Project 3-Binding</title>
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
-		
+
 	<!-- stylesheets -->
 	<link href="../Stylesheets/reset.css" rel="stylesheet">
 	<link rel="stylesheet" href="../Stylesheets/homepage.css">
@@ -34,6 +34,11 @@
 					This collection, curated by Vee Mai, explores the emotional depth of design—examining how feelings, colors, and words work together to shape powerful user experiences in the digital age. Through these articles, we uncover how intentional choices, from soothing gradients to thoughtfully crafted words, create designs that are both meaningful and impactful.
 				</h3>
 			</div>
+
+			<div class="arrow">
+				&#8599;
+			</div>
+			
 		</header>
 		
 		<main>
