added <main> on homepage html

--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 
 	<!-- stylesheets -->
-	<link href="../Stylesheets/reset.css" rel="stylesheet">
-	<link rel="stylesheet" href="../Stylesheets/homepage.css">
+	<link href="Stylesheets/reset.css" rel="stylesheet">
+	<link rel="stylesheet" href="Stylesheets/homepage.css">
 	</head>
 
 	<body>
@@ -38,7 +38,7 @@
 			<div class="arrow">
 				&#8599;
 			</div>
-			
+
 		</header>
 		
 		<main>
@@ -121,7 +121,7 @@
 			Together, these articles highlight a recurring theme: intention. Whether through visuals, colors, or words, great design starts with purpose. By embracing this, designers can create more meaningful work that not only communicates but also resonates.  
 			</p>
 		</section>
-		
+		</main>
 		<footer>
 			<p>Designed by Vee Mai</p>
 		</footer>
