--- a/index.html
+++ b/index.html
@@ -36,13 +36,15 @@
 			</div>
 
 			<div class="arrow">
-				&#8599;
+				<a href="#section1">🡱</a>
+			
 			</div>
 
 		</header>
 		
 		<section>
-			<div id="sub-title">Explore all chapters below!</div>
+			<div class="sticky-header" id="section1"> Explore all chapters below!
+			</div>
 
 			<ol class="cardlink-container">
 				<a href="Pages/article-1.html">
@@ -50,7 +52,7 @@
 						<div class="cardlink-item1">
 							<h2>01</h2>
 						</div>
-						<!-- <div class="cardlink-item2"> -->
+						<div class="cardlink-item2">
 							<h4>Hooked on a Feeling</h4>
 						</div>
 						<div>
@@ -91,14 +93,16 @@
 			</ol>
 		</section> 
 		
+		<section id="colophon">
 		<div id="bubble-title">
 			Colophon
 		</div>
-
-		<section id="colophon">
 			<div class="decorative-04"></div>
 			<div class="decorative-05"></div>
 			<div class="decorative-06"></div>
+			<div class="decorative-07"></div>
+			<div class="decorative-08"></div>
+			<div class="decorative-09"></div>
 			<p>
 				This “binding” book brings together three articles that explore the intersection of design, emotion, and communication:  
 			</p>
