fixing article 01 desktop view

--- a/Pages/article-1.html
+++ b/Pages/article-1.html
@@ -225,9 +225,10 @@
 				</section>
 			</article>
 		</div>
+
 		<button id="button"> <a href="article-2.html"> Next article </a></button>
 		
-		<footer>
+		<footer #mobile-footer #desktop-footer>
 			<p id="citation">Originally published in ©T Magazine ©</p>
 		</footer>
 		<!-- <a id="scroll-top" href="#">Top</a> -->
