--- a/Pages/article-1.html
+++ b/Pages/article-1.html
@@ -17,7 +17,7 @@
 				<span class="short-text">T&I</span>
 				<span class="full-text">Typography & Interaction</span>
 				<span class="short-text">01</span>
-				<span class="full-text" id="strike">Intention</span>
+				<span class="full-text" >01</span>
 				<span class="short-text">VM</span>
 				<span class="full-text">Vee Mai</span>
 			</div>
