--- a/Pages/article-2.html
+++ b/Pages/article-2.html
@@ -17,13 +17,13 @@
 				<span class="short-text">T&I</span>
 				<span class="full-text">Typography & Interaction</span>
 				<span class="short-text">02</span>
-				<span class="full-text" id="strike">Colors</span>
+				<span class="full-text">Colors</span>
 				<span class="short-text">VM</span>
 				<span class="full-text">Vee Mai</span>
 			</div>
 	
-			<h1>Gradients:</h1>
-			<h6> the colorful design trend aiming to soothe these anxious times</h6>
+			<h1><span id="title-art">Gradients:</span></h1>
+			<h6 id="desktop-h6">the colorful design trend aiming to soothe these anxious times</h6>
 
 			<div id="intro">
 				<h5>
@@ -73,8 +73,8 @@
 				<div id="main-title">Gradients: the colorful design trend aiming to soothe these anxious times 
 				</div>
 				
-
 				<div class="empty-sticky"></div>
+
 				<div class="sticky-header" id="section1">
 					<h2>The rise of Gradients</h2>
 				</div>
