Polish but not to my standard yet :(

--- a/Pages/article-3.html
+++ b/Pages/article-3.html
@@ -22,7 +22,7 @@
 			<span class="full-text">Vee Mai</span>
 		</div>
 
-		<h1>Words as Materials</h1>
+		<h1><span id="title-art">Words </span> as Materials</h1>
 
 		<div id="intro">
 			<h5>
@@ -57,12 +57,12 @@
 					<div class="table_of_content">
 						<h4 id="content">Table of Contents
 							<h4><a href="#section1">How Design Works </a></h4>
-							<h4><a href="#section2">How communication works</a></h4>
-							<h4><a href="#section3">How writing fits in</a></h4>
-							<h4><a href="#section4">The gap between us</a></h4>
-							<h4><a href="#section5">What are words for</a></h4>
-							<h4><a href="#section6">Understand and clarify the problem</a></h4>
-							<h4><a href="#section7">More people, more problems</a></h4>
+							<h4><a href="#section2">How Communication works</a></h4>
+							<h4><a href="#section3">How Writing Fits in</a></h4>
+							<h4><a href="#section4">The Gap Between us</a></h4>
+							<h4><a href="#section5">What are Words for</a></h4>
+							<h4><a href="#section6">Understand and Clarify the problem</a></h4>
+							<h4><a href="#section7">More people, More Problems</a></h4>
 						</h4>
 					</div>
 				</div>
@@ -73,6 +73,9 @@
 			<section>
 				<div id="main-title">Words as Material
 				</div>
+
+				<div class="decorative-01"></div>
+				<div class="decorative-02"></div>
 
 				<div class="empty-sticky"></div>
 				<div class="sticky-header" id="section1">
@@ -118,7 +121,7 @@
 
 			<div class="empty-sticky"></div>
 			<div class="sticky-header"id="section3">
-				<h2>How writing fits in </h2>
+				<h2>How Writing Fits in </h2>
 			</div>
 
 			<p>So I’ve been thinking about what communication looks like in the design process. Here’s my take:</p>
